--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,16 @@ h1 {
   text-align: center;
 }
 
+li {
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+img {
+  width: 50%;
+}
+
 .main {
 
 }
@@ -15,4 +25,15 @@ h1 {
   padding: 20px;
 }
 
+.column {
+  float: left;
+  width: 300px;
+}
+
+@media screen and (max-width: 750px) {
+  body { 
+    background: magenta;
+    color: black;
+  }
+}
 
